--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,4 @@
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -38,9 +39,9 @@ h1 {
 
 .title {
     color: #f9bf3b;
-    font-family: "Roboto-black";
+    font-family: "Roboto";
     font-size: 41px;
-    font-weight: 400;
+    font-weight: 900;
     line-height: 24px;
     text-transform: uppercase;
     text-align: center;
@@ -48,9 +49,9 @@ h1 {
 
 .simple .title-big {
     color: #FFFFFF;
-    font-family: "Roboto-black";
+    font-family: "Roboto";
     font-size: 80px;
-    font-weight: 400;
+    font-weight: 900;
     text-transform: uppercase;
     text-align: center;
     margin-top: 21px;
@@ -62,7 +63,7 @@ h2.title {
 
 .promo .promo-text {
     color: #ffff;
-    font-family: "Roboto Light";
+    font-family: "Roboto";
     font-size: 21px;
     font-weight: 300;
     line-height: 28px;
@@ -73,7 +74,7 @@ h2.title {
 
 .promo .promo-text span {
     color: #f9bf3b;
-    font-family: "Roboto - Bold";
+    font-family: "Roboto";
     font-weight: 700;
 }
 
@@ -86,7 +87,7 @@ h2.title {
     box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.18);
     border: 4px solid rgba(0, 0, 0, 0.23);
     background-image: linear-gradient(to top, #2798B9 0%, #3AB6DA 100%);
-    font-family: 'RobotoCondensed';
+    font-family: 'Roboto';
     font-size: 21px;
     line-height: 24px;
     /* identical to box height, or 114% */
@@ -101,7 +102,7 @@ h2.title {
 }
 
 .more .more-text {
-    font-family: 'Roboto - Thin';
+    font-family: 'Roboto';
     font-weight: 100;
     font-size: 15px;
     line-height: 24px;
@@ -186,7 +187,7 @@ h2.title {
 .optimization .optimization-header {
     margin-left: 391px;
     color: #299cbd;
-    font-family: "Roboto - Black";
+    font-family: "Roboto";
     font-size: 29px;
     font-weight: 400;
     text-transform: uppercase;
@@ -197,7 +198,7 @@ h2.title {
     margin-left: 391px;
     font-size: 17px;
     font-weight: 300;
-    font-family: "Roboto - Light";
+    font-family: "Roboto";
 }
 
 .optimization .optimization-text span {
@@ -329,12 +330,12 @@ h2.title {
     font-size: 15px;
     line-height: 21px;
     outline: none;
-    color:#888888;
+    color: #888888;
     text-decoration: none;
 }
 
 .footer .links a {
-    color:#888888;
+    color: #888888;
 }
 
 .footer .footer-text {
